--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,57 @@
-# Compiled class file
+# === Java ===
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+*.log
+*.bak
+*.old
+*.orig
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-
+# === Eclipse ===
 bin/
 .metadata/
+*.tmp
+*.bak
+*.swp
+*.swo
+*.launch
+*.classpath
+*.project
+*.settings/
+
+# Keep the following if you want to share Eclipse project settings
+#!.classpath
+#!.project
+#!.settings/
+
+# === OS files ===
+.DS_Store         # macOS
+Thumbs.db         # Windows
+ehthumbs.db
+Desktop.ini
+
+# === IDEs ===
+.idea/            # IntelliJ
+*.iml
+.vscode/          # VS Code
+
+# === Maven ===
+.mvn/
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# === Gradle ===
+.gradle/
+build/
+
+# === Other ===
+hs_err_pid*
+replay_pid*
